# jsbeautify

./: .gitignore  INSTALL.md  LICENSE  README.md  jsbeautify.py  pyproject.toml
jsbeautify/: __init__.py  core.py  main.py
