[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsbeautify-cli"
version = "0.1.0"
description = "A simple tool to beautify JavaScript files from URLs"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "m4ll0k", email = ""}
]
keywords = ["javascript", "beautify", "formatter", "js", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Filters",
]

dependencies = [
    "jsbeautifier>=1.14.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/m4ll0k/jsbeautify"
Repository = "https://github.com/m4ll0k/jsbeautify"
Issues = "https://github.com/m4ll0k/jsbeautify/issues"

[project.scripts]
jsbeautify = "jsbeautify.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jsbeautify*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
